updated files, fixed spacing, changed font, changed headline, added text effects, added icons

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,10 +1,17 @@
-/*
+@font-face {
+  font-family: nowFont;
+  src: url('../fonts/now.bold.otf');
+}
 
-Ultra Profile
+a { 
+  color:#f53938;
+  text-decoration:none;
+}
 
-https://templatemo.com/tm-464-ultra-profile
+a:hover{ 
+  color:#000000
+}
 
-*/
 
 body {
   background: #ffffff;
@@ -17,7 +24,10 @@ html, body {
   width: 100%;
   overflow-x: hidden;
 }
-h1,h2,h3 { font-weight: 300; }
+h1,h2,h3 { 
+  font-weight: 300; 
+  font-family:nowFont;
+}
 p { line-height: 28px; }
 hr {
   border-color: #f2f2f2;
@@ -139,12 +149,12 @@ hr {
   padding-bottom: 10px;
 }
 .work-wrapper {
-  border: 1px solid rgb(0, 0, 0);
+  border: 3px solid rgb(0, 0, 0);
   border-radius: 5px;
   text-align: center;
-  padding: 80px 40px 80px 40px;
-  -webkit-transition: all 0.6s ease-in;
-          transition: all 0.6s ease-in;
+  padding: 20px 40px 20px 40px;
+  -webkit-transition: all 0.1s ease-in;
+          transition: all 0.1s ease-in;
 }
 
 /*ICONS */
